k8s/app-manifest/j26-tags/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-tags
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-tags
  template:
    metadata:
      labels:
        app: j26-tags
    spec:
      containers:
        - name: j26-tags-app
          image: ghcr.io/scouterna/j26-tags:latest
          ports:
            - containerPort: 3002
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: j26-tags-kv-csi
