k8s/app-manifest/j26-tags/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-tags
spec:
  selector:
    app: j26-tags
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
